--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
   },
   "devDependencies": {
     "@types/react": "^19.1.10",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~10.0.0",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
     "typescript": "~5.9.2"
